<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TodayFMComp</string>
    <string name="action_settings">Settings</string>
    <string name="button">button</string>
    <string name="todayfm_compitition_preferences">Today FM Competition preferences</string>
    <string name="name">Name</string>
    <string name="name_key">name_preference</string>
    <string name="summary_name_preference">Your name as it will be sent to TodayFM</string>
    <string name="dialog_name_preference">Enter your name:</string>
    <string name="phone">Phone number</string>
    <string name="phone_key">phone_preference</string>
    <string name="summary_phone_preference">The phone number to use to contact TodayFM</string>
    <string name="dialog_phone_preference">Enter Today FM\'s phone number:</string>
    <string name="default_phone_number">53102</string>
    <string name="title_list_preference">Prefix notation</string>
    <string name="prefix_list_key">prefix_list_preference</string>
    <string name="summary_list_preference">Choose the prefix to send to Today FM</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_location_checkbox_preference">Include location?</string>
    <string name="location_checkbox_key">location_checkbox_preference</string>
    <string name="summary_location_checkbox_preference">Do you want to send your location at the end of the message?</string>
    <string name="location">Location</string>
    <string name="location_key">location_preference</string>
    <string name="summary_location_preference">Your location to send to TodayFM</string>
    <string name="dialog_location_preference">Enter your current location:</string>
    <string name="invalid_message_format">Message not sent, Go to the settings to enter your details</string>
    <string name="toast_message_format">Sent \"%1$s\" to \"%2$s\"</string>
</resources>
